--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 读书笔记
+title: 学习笔记
 subtitle: 
 author: 小石匠
 language: zh-CN
@@ -21,7 +21,7 @@ permalink_defaults:
 #Custom Setting Start
 
 # Site settings
-SEOTitle:  读书笔记 | 小石匠
+SEOTitle:  学习笔记 | 小石匠
 email: soaringhawkcheng@qq.com
 description: ""
 keyword: ""
